crates/djls-template-ast/src/snapshots/djls_template_ast__lexer__tests__tokenize_comments.snap
---
source: crates/djls-template-ast/src/lexer.rs
expression: tokens
---
- token_type:
    Text: "<!--"
  line: 1
  start: 0
- token_type:
    Whitespace: 1
  line: 1
  start: 4
- token_type:
    Text: HTML
  line: 1
  start: 5
- token_type:
    Whitespace: 1
  line: 1
  start: 9
- token_type:
    Text: comment
  line: 1
  start: 10
- token_type:
    Whitespace: 1
  line: 1
  start: 17
- token_type:
    Text: "-->"
  line: 1
  start: 18
- token_type: Newline
  line: 2
  start: 21
- token_type:
    Comment:
      - Django comment
      - "{#"
      - "#}"
  line: 2
  start: 22
- token_type: Eof
  line: 2
  start: ~
