crates/djls-template-ast/src/snapshots/djls_template_ast__lexer__tests__tokenize_django_block.snap
---
source: crates/djls-template-ast/src/lexer.rs
expression: tokens
---
- token_type:
    DjangoBlock: if user.is_staff
  line: 1
  start: 0
- token_type:
    Text: Admin
  line: 1
  start: 22
- token_type:
    DjangoBlock: else
  line: 1
  start: 27
- token_type:
    Text: User
  line: 1
  start: 37
- token_type:
    DjangoBlock: endif
  line: 1
  start: 41
- token_type: Eof
  line: 1
  start: ~
