crates/djls-template-ast/src/snapshots/djls_template_ast__lexer__tests__tokenize_django_variable.snap
---
source: crates/djls-template-ast/src/lexer.rs
expression: tokens
---
- token_type:
    DjangoVariable: "user.name|default:\"Anonymous\"|title"
  line: 1
  start: 0
- token_type: Eof
  line: 1
  start: ~
