crates/djls-template-ast/src/snapshots/djls_template_ast__lexer__tests__tokenize_everything.snap
---
source: crates/djls-template-ast/src/lexer.rs
expression: tokens
---
- token_type:
    Text: "<!DOCTYPE"
  line: 1
  start: 0
- token_type:
    Whitespace: 1
  line: 1
  start: 9
- token_type:
    Text: html>
  line: 1
  start: 10
- token_type: Newline
  line: 2
  start: 15
- token_type:
    Text: "<html>"
  line: 2
  start: 16
- token_type: Newline
  line: 3
  start: 22
- token_type:
    Text: "<head>"
  line: 3
  start: 23
- token_type: Newline
  line: 4
  start: 29
- token_type:
    Whitespace: 4
  line: 4
  start: 30
- token_type:
    Text: "<style"
  line: 4
  start: 34
- token_type:
    Whitespace: 1
  line: 4
  start: 40
- token_type:
    Text: "type=\"text/css\">"
  line: 4
  start: 41
- token_type: Newline
  line: 5
  start: 57
- token_type:
    Whitespace: 8
  line: 5
  start: 58
- token_type:
    Text: /*
  line: 5
  start: 66
- token_type:
    Whitespace: 1
  line: 5
  start: 68
- token_type:
    Text: Style
  line: 5
  start: 69
- token_type:
    Whitespace: 1
  line: 5
  start: 74
- token_type:
    Text: header
  line: 5
  start: 75
- token_type:
    Whitespace: 1
  line: 5
  start: 81
- token_type:
    Text: "*/"
  line: 5
  start: 82
- token_type: Newline
  line: 6
  start: 84
- token_type:
    Whitespace: 8
  line: 6
  start: 85
- token_type:
    Text: ".header"
  line: 6
  start: 93
- token_type:
    Whitespace: 1
  line: 6
  start: 100
- token_type:
    Text: "{"
  line: 6
  start: 101
- token_type:
    Whitespace: 1
  line: 6
  start: 102
- token_type:
    Text: "color:"
  line: 6
  start: 103
- token_type:
    Whitespace: 1
  line: 6
  start: 109
- token_type:
    Text: blue;
  line: 6
  start: 110
- token_type:
    Whitespace: 1
  line: 6
  start: 115
- token_type:
    Text: "}"
  line: 6
  start: 116
- token_type: Newline
  line: 7
  start: 117
- token_type:
    Whitespace: 4
  line: 7
  start: 118
- token_type:
    Text: "</style>"
  line: 7
  start: 122
- token_type: Newline
  line: 8
  start: 130
- token_type:
    Whitespace: 4
  line: 8
  start: 131
- token_type:
    Text: "<script"
  line: 8
  start: 135
- token_type:
    Whitespace: 1
  line: 8
  start: 142
- token_type:
    Text: "type=\"text/javascript\">"
  line: 8
  start: 143
- token_type: Newline
  line: 9
  start: 166
- token_type:
    Whitespace: 8
  line: 9
  start: 167
- token_type:
    Text: //
  line: 9
  start: 175
- token_type:
    Whitespace: 1
  line: 9
  start: 177
- token_type:
    Text: Init
  line: 9
  start: 178
- token_type:
    Whitespace: 1
  line: 9
  start: 182
- token_type:
    Text: app
  line: 9
  start: 183
- token_type: Newline
  line: 10
  start: 186
- token_type:
    Whitespace: 8
  line: 10
  start: 187
- token_type:
    Text: const
  line: 10
  start: 195
- token_type:
    Whitespace: 1
  line: 10
  start: 200
- token_type:
    Text: app
  line: 10
  start: 201
- token_type:
    Whitespace: 1
  line: 10
  start: 204
- token_type:
    Text: "="
  line: 10
  start: 205
- token_type:
    Whitespace: 1
  line: 10
  start: 206
- token_type:
    Text: "{"
  line: 10
  start: 207
- token_type: Newline
  line: 11
  start: 208
- token_type:
    Whitespace: 12
  line: 11
  start: 209
- token_type:
    Text: /*
  line: 11
  start: 221
- token_type:
    Whitespace: 1
  line: 11
  start: 223
- token_type:
    Text: Config
  line: 11
  start: 224
- token_type:
    Whitespace: 1
  line: 11
  start: 230
- token_type:
    Text: "*/"
  line: 11
  start: 231
- token_type: Newline
  line: 12
  start: 233
- token_type:
    Whitespace: 12
  line: 12
  start: 234
- token_type:
    Text: "debug:"
  line: 12
  start: 246
- token_type:
    Whitespace: 1
  line: 12
  start: 252
- token_type:
    Text: "true"
  line: 12
  start: 253
- token_type: Newline
  line: 13
  start: 257
- token_type:
    Whitespace: 8
  line: 13
  start: 258
- token_type:
    Text: "};"
  line: 13
  start: 266
- token_type: Newline
  line: 14
  start: 268
- token_type:
    Whitespace: 4
  line: 14
  start: 269
- token_type:
    Text: "</script>"
  line: 14
  start: 273
- token_type: Newline
  line: 15
  start: 282
- token_type:
    Text: "</head>"
  line: 15
  start: 283
- token_type: Newline
  line: 16
  start: 290
- token_type:
    Text: "<body>"
  line: 16
  start: 291
- token_type: Newline
  line: 17
  start: 297
- token_type:
    Whitespace: 4
  line: 17
  start: 298
- token_type:
    Text: "<!--"
  line: 17
  start: 302
- token_type:
    Whitespace: 1
  line: 17
  start: 306
- token_type:
    Text: Header
  line: 17
  start: 307
- token_type:
    Whitespace: 1
  line: 17
  start: 313
- token_type:
    Text: section
  line: 17
  start: 314
- token_type:
    Whitespace: 1
  line: 17
  start: 321
- token_type:
    Text: "-->"
  line: 17
  start: 322
- token_type: Newline
  line: 18
  start: 325
- token_type:
    Whitespace: 4
  line: 18
  start: 326
- token_type:
    Text: "<div"
  line: 18
  start: 330
- token_type:
    Whitespace: 1
  line: 18
  start: 334
- token_type:
    Text: "class=\"header\""
  line: 18
  start: 335
- token_type:
    Whitespace: 1
  line: 18
  start: 349
- token_type:
    Text: "id=\"main\""
  line: 18
  start: 350
- token_type:
    Whitespace: 1
  line: 18
  start: 359
- token_type:
    Text: "data-value=\"123\""
  line: 18
  start: 360
- token_type:
    Whitespace: 1
  line: 18
  start: 376
- token_type:
    Text: disabled>
  line: 18
  start: 377
- token_type: Newline
  line: 19
  start: 386
- token_type:
    Whitespace: 8
  line: 19
  start: 387
- token_type:
    DjangoBlock: if user.is_authenticated
  line: 19
  start: 395
- token_type: Newline
  line: 20
  start: 425
- token_type:
    Whitespace: 12
  line: 20
  start: 426
- token_type:
    Comment:
      - Welcome message
      - "{#"
      - "#}"
  line: 20
  start: 438
- token_type: Newline
  line: 21
  start: 459
- token_type:
    Whitespace: 12
  line: 21
  start: 460
- token_type:
    Text: "<h1>Welcome,"
  line: 21
  start: 472
- token_type:
    Whitespace: 1
  line: 21
  start: 484
- token_type:
    DjangoVariable: "user.name|default:\"Guest\"|title"
  line: 21
  start: 485
- token_type:
    Text: "!</h1>"
  line: 21
  start: 522
- token_type: Newline
  line: 22
  start: 528
- token_type:
    Whitespace: 12
  line: 22
  start: 529
- token_type:
    DjangoBlock: if user.is_staff
  line: 22
  start: 541
- token_type: Newline
  line: 23
  start: 563
- token_type:
    Whitespace: 16
  line: 23
  start: 564
- token_type:
    Text: "<span>Admin</span>"
  line: 23
  start: 580
- token_type: Newline
  line: 24
  start: 598
- token_type:
    Whitespace: 12
  line: 24
  start: 599
- token_type:
    DjangoBlock: else
  line: 24
  start: 611
- token_type: Newline
  line: 25
  start: 621
- token_type:
    Whitespace: 16
  line: 25
  start: 622
- token_type:
    Text: "<span>User</span>"
  line: 25
  start: 638
- token_type: Newline
  line: 26
  start: 655
- token_type:
    Whitespace: 12
  line: 26
  start: 656
- token_type:
    DjangoBlock: endif
  line: 26
  start: 668
- token_type: Newline
  line: 27
  start: 679
- token_type:
    Whitespace: 8
  line: 27
  start: 680
- token_type:
    DjangoBlock: endif
  line: 27
  start: 688
- token_type: Newline
  line: 28
  start: 699
- token_type:
    Whitespace: 4
  line: 28
  start: 700
- token_type:
    Text: "</div>"
  line: 28
  start: 704
- token_type: Newline
  line: 29
  start: 710
- token_type:
    Text: "</body>"
  line: 29
  start: 711
- token_type: Newline
  line: 30
  start: 718
- token_type:
    Text: "</html>"
  line: 30
  start: 719
- token_type: Eof
  line: 30
  start: ~
